Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -124,28 +124,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 216,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:26:52.790973Z",
-     "start_time": "2019-06-18T03:26:52.786956Z"
+     "end_time": "2019-06-18T03:34:30.521916Z",
+     "start_time": "2019-06-18T03:34:30.517914Z"
     }
    },
    "outputs": [],
    "source": [
     "# declare hyper parameter\n",
-    "learning_rate = 0.0008 ; beta1 = 0.9; beta2 = 0.999; adam_e = 1e-8\n",
-    "num_epoch     = 30    ; batch_size = 50 ; print_size = 1; \n",
+    "learning_rate = 0.0001 ; beta1 = 0.9; beta2 = 0.999; adam_e = 1e-8\n",
+    "num_epoch     = 100    ; batch_size = 50 ; print_size = 1; \n",
     "channel_sizes = 96 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 217,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:26:53.107383Z",
-     "start_time": "2019-06-18T03:26:53.067485Z"
+     "end_time": "2019-06-18T03:34:30.863988Z",
+     "start_time": "2019-06-18T03:34:30.815120Z"
     },
     "code_folding": [
      60,
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 218,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:26:53.508856Z",
-     "start_time": "2019-06-18T03:26:53.334288Z"
+     "end_time": "2019-06-18T03:34:31.308834Z",
+     "start_time": "2019-06-18T03:34:31.137255Z"
     }
    },
    "outputs": [],
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 219,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:26:54.442361Z",
-     "start_time": "2019-06-18T03:26:53.720261Z"
+     "end_time": "2019-06-18T03:34:32.292426Z",
+     "start_time": "2019-06-18T03:34:31.565110Z"
     }
    },
    "outputs": [],
@@ -379,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 220,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:26:55.541653Z",
-     "start_time": "2019-06-18T03:26:54.651311Z"
+     "end_time": "2019-06-18T03:34:33.573799Z",
+     "start_time": "2019-06-18T03:34:32.517562Z"
     }
    },
    "outputs": [],
@@ -395,11 +395,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:32:29.215865Z",
-     "start_time": "2019-06-18T03:26:55.743117Z"
+     "start_time": "2019-06-18T03:34:32.319Z"
     }
    },
    "outputs": [
@@ -407,36 +406,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.1145999999716878\tTrain Cost: 2.311267759799957\tTest Acc: 0.13700000003445895\tTest Cost: 2.3021641105413435\tLR: 0.0008\n",
-      "Current: 2\tTrain Acc: 0.12259999975562096\tTrain Cost: 2.2534294176101684\tTest Acc: 0.1565000003669411\tTest Cost: 2.172299525141716\tLR: 0.0008\n",
-      "Current: 3\tTrain Acc: 0.14459999985992908\tTrain Cost: 2.1652973175048826\tTest Acc: 0.16199999931268394\tTest Cost: 2.157138021290302\tLR: 0.0008\n",
-      "Current: 4\tTrain Acc: 0.12339999958872795\tTrain Cost: 2.15622917175293\tTest Acc: 0.13662500001955777\tTest Cost: 2.153741845488548\tLR: 0.0008\n",
-      "Current: 5\tTrain Acc: 0.12779999986290932\tTrain Cost: 2.1540290832519533\tTest Acc: 0.12962499987334014\tTest Cost: 2.149789135158062\tLR: 0.0008\n",
-      "Current: 6\tTrain Acc: 0.1310000002756715\tTrain Cost: 2.148848863840103\tTest Acc: 0.13425000000279397\tTest Cost: 2.1399195209145545\tLR: 0.0008\n",
-      "Current: 7\tTrain Acc: 0.1741999999433756\tTrain Cost: 2.1405778980255126\tTest Acc: 0.18500000024214386\tTest Cost: 2.124657954275608\tLR: 0.0008\n",
-      "Current: 8\tTrain Acc: 0.1981999998167157\tTrain Cost: 2.1236392855644226\tTest Acc: 0.20512499955948443\tTest Cost: 2.105368559807539\tLR: 0.0008\n",
-      "Current: 9\tTrain Acc: 0.20400000058114529\tTrain Cost: 2.115155349969864\tTest Acc: 0.21499999982770532\tTest Cost: 2.099807009100914\tLR: 0.0008\n",
-      "Current: 10\tTrain Acc: 0.22040000081062316\tTrain Cost: 2.0977988982200624\tTest Acc: 0.22274999991059302\tTest Cost: 2.0958452351391315\tLR: 0.0008\n",
-      "Current: 11\tTrain Acc: 0.21400000002235176\tTrain Cost: 2.0994870138168333\tTest Acc: 0.2301249995827675\tTest Cost: 2.082692737132311\tLR: 0.0008\n",
-      "Current: 12\tTrain Acc: 0.23879999920725822\tTrain Cost: 2.0399101519584657\tTest Acc: 0.2589999998919666\tTest Cost: 1.999423661828041\tLR: 0.0008\n",
-      "Current: 13\tTrain Acc: 0.2508000010251999\tTrain Cost: 2.0102648615837095\tTest Acc: 0.26812500013038515\tTest Cost: 1.9852817170321941\tLR: 0.0008\n",
-      "Current: 14\tTrain Acc: 0.26080000020563604\tTrain Cost: 2.004875987768173\tTest Acc: 0.2635000008624047\tTest Cost: 1.9724399842321874\tLR: 0.0008\n",
-      "Current: 15\tTrain Acc: 0.261599999666214\tTrain Cost: 1.9764422380924225\tTest Acc: 0.2730000010225922\tTest Cost: 1.971319106966257\tLR: 0.0008\n",
-      "Current: 16\tTrain Acc: 0.27059999950230124\tTrain Cost: 1.9678572630882263\tTest Acc: 0.2721250003669411\tTest Cost: 1.9466703966259957\tLR: 0.0008\n",
-      "Current: 17\tTrain Acc: 0.25379999905824663\tTrain Cost: 1.992841796875\tTest Acc: 0.25662500034086405\tTest Cost: 1.9958512730896474\tLR: 0.0008\n",
-      "Current: 18\tTrain Acc: 0.27280000075697897\tTrain Cost: 1.9591922330856324\tTest Acc: 0.2871250011958182\tTest Cost: 1.9152300380170346\tLR: 0.0008\n",
-      "Current: 19\tTrain Acc: 0.2868000017106533\tTrain Cost: 1.9291051638126373\tTest Acc: 0.28612499954178927\tTest Cost: 1.918453750014305\tLR: 0.0008\n",
-      "Current: 20\tTrain Acc: 0.2935999992489815\tTrain Cost: 1.9213095891475678\tTest Acc: 0.29462500056251884\tTest Cost: 1.907746148109436\tLR: 0.0008\n",
-      "Current: 21\tTrain Acc: 0.3076000016927719\tTrain Cost: 1.9080435132980347\tTest Acc: 0.3027499994728714\tTest Cost: 1.8999047882854938\tLR: 0.0008\n",
-      "Current: 22\tTrain Acc: 0.30639999896287917\tTrain Cost: 1.9007921135425567\tTest Acc: 0.3128749997820705\tTest Cost: 1.8801970846951008\tLR: 0.0008\n",
-      "Current: 23\tTrain Acc: 0.3170000021159649\tTrain Cost: 1.887483971118927\tTest Acc: 0.3165000000037253\tTest Cost: 1.8734705336391926\tLR: 0.0008\n",
-      "Current: 24\tTrain Acc: 0.31280000165104865\tTrain Cost: 1.8937060856819152\tTest Acc: 0.3122500010766089\tTest Cost: 1.8827659599483013\tLR: 0.0008\n",
-      "Current: 25\tTrain Acc: 0.3020000010728836\tTrain Cost: 1.905749053955078\tTest Acc: 0.32000000057742\tTest Cost: 1.8838155761361122\tLR: 0.0008\n",
-      "Current: 26\tTrain Acc: 0.3210000021755695\tTrain Cost: 1.8834611105918884\tTest Acc: 0.3171250009909272\tTest Cost: 1.8698981061577797\tLR: 0.0008\n",
-      "Current: 27\tTrain Acc: 0.33259999975562093\tTrain Cost: 1.863142293691635\tTest Acc: 0.3245000009424984\tTest Cost: 1.8856544464826583\tLR: 0.0008\n",
-      "Current: 28\tTrain Acc: 0.32760000064969064\tTrain Cost: 1.8643174183368683\tTest Acc: 0.3285000012256205\tTest Cost: 1.8541592232882977\tLR: 0.0008\n",
-      "Current: 29\tTrain Acc: 0.32980000048875807\tTrain Cost: 1.8598072302341462\tTest Acc: 0.3358750011771917\tTest Cost: 1.8589023768901825\tLR: 0.0008\n",
-      "Current: 30\tTrain Acc: 0.33659999996423723\tTrain Cost: 1.8510540986061097\tTest Acc: 0.3352500008419156\tTest Cost: 1.8542328149080276\tLR: 0.0008\n"
+      "Current: 1\tTrain Acc: 0.14079999983310698\tTrain Cost: 2.234725170135498\tTest Acc: 0.18274999998975544\tTest Cost: 2.1399471789598463\tLR: 0.0001\n",
+      "Current: 2\tTrain Acc: 0.18560000002384186\tTrain Cost: 2.123726234436035\tTest Acc: 0.1842499997699633\tTest Cost: 2.122033999115229\tLR: 0.0001\n",
+      "Current: 3\tTrain Acc: 0.19339999962598087\tTrain Cost: 2.087103728055954\tTest Acc: 0.20175000019371508\tTest Cost: 2.0599366456270216\tLR: 0.0001\n",
+      "Current Iter : 4/100 batch : 7400/8000 acc : 0.26 cost : 1.9873084\r"
      ]
     }
    ],
