Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -395,10 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:34:32.319Z"
+     "end_time": "2019-06-18T03:45:11.304875Z",
+     "start_time": "2019-06-18T03:34:33.893944Z"
     }
    },
    "outputs": [
@@ -453,7 +454,34 @@
       "Current: 45\tTrain Acc: 0.36700000122189524\tTrain Cost: 1.6966147863864898\tTest Acc: 0.3328750006854534\tTest Cost: 1.74379822909832\tLR: 0.0001\n",
       "Current: 46\tTrain Acc: 0.36900000110268594\tTrain Cost: 1.6891328823566436\tTest Acc: 0.36887500174343585\tTest Cost: 1.695489326864481\tLR: 0.0001\n",
       "Current: 47\tTrain Acc: 0.3778000018000603\tTrain Cost: 1.6757837569713592\tTest Acc: 0.37150000045076015\tTest Cost: 1.6820321463048458\tLR: 0.0001\n",
-      "Current Iter : 48/100 batch : 900/5000 acc : 0.3 cost : 1.81891914\r"
+      "Current: 48\tTrain Acc: 0.36960000187158587\tTrain Cost: 1.6786118483543395\tTest Acc: 0.3428750017657876\tTest Cost: 1.722259522974491\tLR: 0.0001\n",
+      "Current: 49\tTrain Acc: 0.37320000171661377\tTrain Cost: 1.6670253014564513\tTest Acc: 0.37787500079721215\tTest Cost: 1.6711605027318002\tLR: 0.0001\n",
+      "Current: 50\tTrain Acc: 0.3742000013589859\tTrain Cost: 1.6663785827159883\tTest Acc: 0.374749999679625\tTest Cost: 1.6758137777447701\tLR: 0.0001\n",
+      "Current: 51\tTrain Acc: 0.3849999994039536\tTrain Cost: 1.6524475491046906\tTest Acc: 0.37250000033527614\tTest Cost: 1.6807654105126857\tLR: 0.0001\n",
+      "Current: 52\tTrain Acc: 0.38440000027418136\tTrain Cost: 1.6577727746963502\tTest Acc: 0.38299999907612803\tTest Cost: 1.6576874025166035\tLR: 0.0001\n",
+      "Current: 53\tTrain Acc: 0.39140000149607657\tTrain Cost: 1.6398702192306518\tTest Acc: 0.38724999949336053\tTest Cost: 1.6611658759415149\tLR: 0.0001\n",
+      "Current: 54\tTrain Acc: 0.39539999976754187\tTrain Cost: 1.6370338320732116\tTest Acc: 0.37725000055506824\tTest Cost: 1.6587295182049275\tLR: 0.0001\n",
+      "Current: 55\tTrain Acc: 0.395599999576807\tTrain Cost: 1.6369102478027344\tTest Acc: 0.3682499995455146\tTest Cost: 1.6793448396027089\tLR: 0.0001\n",
+      "Current: 56\tTrain Acc: 0.38240000158548354\tTrain Cost: 1.6367352509498596\tTest Acc: 0.37700000079348683\tTest Cost: 1.6510105103254318\tLR: 0.0001\n",
+      "Current: 57\tTrain Acc: 0.38299999982118604\tTrain Cost: 1.6302008163928985\tTest Acc: 0.375625002104789\tTest Cost: 1.6527208052575588\tLR: 0.0001\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Iter : 58/100 batch : 3550/5000 acc : 0.24 cost : 1.7512779\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-221-c8ce8342c53d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0miter\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnum_epoch\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcurrent_batch_index\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mcurrent_data\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mcurrent_label\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0msess_results\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcost\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgrad_update\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_data\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_label\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0miter_num\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0miter\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
