Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 222,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:34:30.863988Z",
-     "start_time": "2019-06-18T03:34:30.815120Z"
+     "end_time": "2019-06-18T03:45:51.531987Z",
+     "start_time": "2019-06-18T03:45:51.489110Z"
     },
     "code_folding": [
      60,
@@ -212,7 +212,7 @@
     "        update_w.append(tf.assign( self.v,self.v*beta2 + (1-beta2) * (grad_new ** 2)   ))\n",
     "        m_hat = self.m / (1-tf.pow(beta1,iter_num))\n",
     "        v_hat = self.v / (1-tf.pow(beta2,iter_num))\n",
-    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e)   )))\n",
+    "        update_w.append(tf.assign( self.w,self.w - learning_rate*( m_hat/(tf.sqrt(v_hat) + adam_e)  + 0.001*self.w )))\n",
     "        return grad_pass,update_w  \n",
     "class tf_batch_norm_layer():\n",
     "    \n",
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 223,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:34:31.308834Z",
-     "start_time": "2019-06-18T03:34:31.137255Z"
+     "end_time": "2019-06-18T03:45:52.005067Z",
+     "start_time": "2019-06-18T03:45:51.825270Z"
     }
    },
    "outputs": [],
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 224,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:34:32.292426Z",
-     "start_time": "2019-06-18T03:34:31.565110Z"
+     "end_time": "2019-06-18T03:45:53.021829Z",
+     "start_time": "2019-06-18T03:45:52.273578Z"
     }
    },
    "outputs": [],
@@ -379,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 225,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:34:33.573799Z",
-     "start_time": "2019-06-18T03:34:32.517562Z"
+     "end_time": "2019-06-18T03:45:54.413939Z",
+     "start_time": "2019-06-18T03:45:53.308811Z"
     }
    },
    "outputs": [],
@@ -395,11 +395,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:45:11.304875Z",
-     "start_time": "2019-06-18T03:34:33.893944Z"
+     "start_time": "2019-06-18T03:45:52.940Z"
     }
    },
    "outputs": [
@@ -407,81 +406,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.14079999983310698\tTrain Cost: 2.234725170135498\tTest Acc: 0.18274999998975544\tTest Cost: 2.1399471789598463\tLR: 0.0001\n",
-      "Current: 2\tTrain Acc: 0.18560000002384186\tTrain Cost: 2.123726234436035\tTest Acc: 0.1842499997699633\tTest Cost: 2.122033999115229\tLR: 0.0001\n",
-      "Current: 3\tTrain Acc: 0.19339999962598087\tTrain Cost: 2.087103728055954\tTest Acc: 0.20175000019371508\tTest Cost: 2.0599366456270216\tLR: 0.0001\n",
-      "Current: 4\tTrain Acc: 0.1984000001102686\tTrain Cost: 2.0608221209049224\tTest Acc: 0.20862500004004686\tTest Cost: 2.044258897006512\tLR: 0.0001\n",
-      "Current: 5\tTrain Acc: 0.21539999976754187\tTrain Cost: 2.0445335578918455\tTest Acc: 0.2101249992614612\tTest Cost: 2.028610761463642\tLR: 0.0001\n",
-      "Current: 6\tTrain Acc: 0.22059999991208315\tTrain Cost: 2.0304688632488253\tTest Acc: 0.22262499947100878\tTest Cost: 2.022926799952984\tLR: 0.0001\n",
-      "Current: 7\tTrain Acc: 0.2283999992161989\tTrain Cost: 2.0219485473632814\tTest Acc: 0.23412499986588955\tTest Cost: 2.0114158876240253\tLR: 0.0001\n",
-      "Current: 8\tTrain Acc: 0.24039999954402447\tTrain Cost: 2.007826955318451\tTest Acc: 0.24062499920837582\tTest Cost: 2.000404068827629\tLR: 0.0001\n",
-      "Current: 9\tTrain Acc: 0.2473999999463558\tTrain Cost: 1.998168249130249\tTest Acc: 0.24799999892711638\tTest Cost: 1.9973748914897442\tLR: 0.0001\n",
-      "Current: 10\tTrain Acc: 0.2451999993622303\tTrain Cost: 1.9904936361312866\tTest Acc: 0.24937500045634806\tTest Cost: 1.9991622529923916\tLR: 0.0001\n",
-      "Current: 11\tTrain Acc: 0.24639999963343143\tTrain Cost: 1.9871359729766847\tTest Acc: 0.26212500003166495\tTest Cost: 1.982487865537405\tLR: 0.0001\n",
-      "Current: 12\tTrain Acc: 0.2686000007390976\tTrain Cost: 1.9719623839855194\tTest Acc: 0.2509999995585531\tTest Cost: 1.9764903403818608\tLR: 0.0001\n",
-      "Current: 13\tTrain Acc: 0.26640000008046627\tTrain Cost: 1.9617844307422638\tTest Acc: 0.2598750004544854\tTest Cost: 1.9632358901202678\tLR: 0.0001\n",
-      "Current: 14\tTrain Acc: 0.2792000004649162\tTrain Cost: 1.954003038406372\tTest Acc: 0.2581249999348074\tTest Cost: 1.9528162993490696\tLR: 0.0001\n",
-      "Current: 15\tTrain Acc: 0.276999999769032\tTrain Cost: 1.9421912753582\tTest Acc: 0.28125000004656614\tTest Cost: 1.9408917471766471\tLR: 0.0001\n",
-      "Current: 16\tTrain Acc: 0.28420000068843365\tTrain Cost: 1.930716882944107\tTest Acc: 0.28637499921023846\tTest Cost: 1.9245327524840832\tLR: 0.0001\n",
-      "Current: 17\tTrain Acc: 0.29379999965429304\tTrain Cost: 1.9206089234352113\tTest Acc: 0.2901249999646097\tTest Cost: 1.913304875791073\tLR: 0.0001\n",
-      "Current: 18\tTrain Acc: 0.2942000012099743\tTrain Cost: 1.9093153643608094\tTest Acc: 0.2978750011883676\tTest Cost: 1.9045452147722244\tLR: 0.0001\n",
-      "Current: 19\tTrain Acc: 0.3075999990105629\tTrain Cost: 1.8913669967651368\tTest Acc: 0.295875000488013\tTest Cost: 1.8948284432291984\tLR: 0.0001\n",
-      "Current: 20\tTrain Acc: 0.3056000012159348\tTrain Cost: 1.882407068014145\tTest Acc: 0.2997499997727573\tTest Cost: 1.8791104771196843\tLR: 0.0001\n",
-      "Current: 21\tTrain Acc: 0.31620000027120115\tTrain Cost: 1.868016562461853\tTest Acc: 0.31037500002421436\tTest Cost: 1.8696437440812588\tLR: 0.0001\n",
-      "Current: 22\tTrain Acc: 0.3164000014960766\tTrain Cost: 1.854662401676178\tTest Acc: 0.31187500124797224\tTest Cost: 1.8544253170490266\tLR: 0.0001\n",
-      "Current: 23\tTrain Acc: 0.32520000100135804\tTrain Cost: 1.8469603180885314\tTest Acc: 0.3132499999366701\tTest Cost: 1.8471907511353494\tLR: 0.0001\n",
-      "Current: 24\tTrain Acc: 0.3162000018358231\tTrain Cost: 1.8360470533370972\tTest Acc: 0.3257500004023314\tTest Cost: 1.8314804442226886\tLR: 0.0001\n",
-      "Current: 25\tTrain Acc: 0.32640000075101855\tTrain Cost: 1.8248533451557158\tTest Acc: 0.31775000169873235\tTest Cost: 1.8306966193020344\tLR: 0.0001\n",
-      "Current: 26\tTrain Acc: 0.32620000064373017\tTrain Cost: 1.8196953642368316\tTest Acc: 0.319875002047047\tTest Cost: 1.8402116790413856\tLR: 0.0001\n",
-      "Current: 27\tTrain Acc: 0.3308000013232231\tTrain Cost: 1.812872121334076\tTest Acc: 0.3282500009983778\tTest Cost: 1.8151794038712978\tLR: 0.0001\n",
-      "Current: 28\tTrain Acc: 0.3400000014156103\tTrain Cost: 1.7992946314811706\tTest Acc: 0.33662500223144887\tTest Cost: 1.801733034104109\tLR: 0.0001\n",
-      "Current: 29\tTrain Acc: 0.33859999880194663\tTrain Cost: 1.7927379667758943\tTest Acc: 0.32887500040233136\tTest Cost: 1.8076076187193393\tLR: 0.0001\n",
-      "Current: 30\tTrain Acc: 0.34440000042319296\tTrain Cost: 1.7821524238586426\tTest Acc: 0.3392499997280538\tTest Cost: 1.7858698070049286\tLR: 0.0001\n",
-      "Current: 31\tTrain Acc: 0.3402000015974045\tTrain Cost: 1.7754076302051545\tTest Acc: 0.336750001180917\tTest Cost: 1.7806221045553685\tLR: 0.0001\n",
-      "Current: 32\tTrain Acc: 0.3406000010669231\tTrain Cost: 1.770530161857605\tTest Acc: 0.3401250012218952\tTest Cost: 1.782989391684532\tLR: 0.0001\n",
-      "Current: 33\tTrain Acc: 0.34400000169873235\tTrain Cost: 1.7637468302249908\tTest Acc: 0.3500000006519258\tTest Cost: 1.771570021659136\tLR: 0.0001\n",
-      "Current: 34\tTrain Acc: 0.3554000008106232\tTrain Cost: 1.7573425829410554\tTest Acc: 0.35574999954551456\tTest Cost: 1.7623099356889724\tLR: 0.0001\n",
-      "Current: 35\tTrain Acc: 0.34840000078082084\tTrain Cost: 1.7609592580795288\tTest Acc: 0.3488750021904707\tTest Cost: 1.757760801166296\tLR: 0.0001\n",
-      "Current: 36\tTrain Acc: 0.35500000059604647\tTrain Cost: 1.7460457623004912\tTest Acc: 0.3525000006891787\tTest Cost: 1.747057005763054\tLR: 0.0001\n",
-      "Current: 37\tTrain Acc: 0.3524000005424023\tTrain Cost: 1.7387336742877961\tTest Acc: 0.35850000092759726\tTest Cost: 1.7420685924589634\tLR: 0.0001\n",
-      "Current: 38\tTrain Acc: 0.35660000070929526\tTrain Cost: 1.7397724318504333\tTest Acc: 0.349375001527369\tTest Cost: 1.7510115839540958\tLR: 0.0001\n",
-      "Current: 39\tTrain Acc: 0.35959999963641165\tTrain Cost: 1.730771553516388\tTest Acc: 0.33887500101700424\tTest Cost: 1.7564357034862041\tLR: 0.0001\n",
-      "Current: 40\tTrain Acc: 0.3686000004410744\tTrain Cost: 1.7140487265586852\tTest Acc: 0.36062500057742\tTest Cost: 1.7284209527075292\tLR: 0.0001\n",
-      "Current: 41\tTrain Acc: 0.3671999998390675\tTrain Cost: 1.7135615456104278\tTest Acc: 0.3660000007599592\tTest Cost: 1.7167180687189103\tLR: 0.0001\n",
-      "Current: 42\tTrain Acc: 0.37400000154972074\tTrain Cost: 1.7035053062438965\tTest Acc: 0.35962500078603626\tTest Cost: 1.7130893424153328\tLR: 0.0001\n",
-      "Current: 43\tTrain Acc: 0.36980000033974647\tTrain Cost: 1.698035728931427\tTest Acc: 0.3726250011473894\tTest Cost: 1.7008096508681774\tLR: 0.0001\n",
-      "Current: 44\tTrain Acc: 0.37159999921917913\tTrain Cost: 1.6912947297096252\tTest Acc: 0.37362500140443444\tTest Cost: 1.6971167407929897\tLR: 0.0001\n",
-      "Current: 45\tTrain Acc: 0.36700000122189524\tTrain Cost: 1.6966147863864898\tTest Acc: 0.3328750006854534\tTest Cost: 1.74379822909832\tLR: 0.0001\n",
-      "Current: 46\tTrain Acc: 0.36900000110268594\tTrain Cost: 1.6891328823566436\tTest Acc: 0.36887500174343585\tTest Cost: 1.695489326864481\tLR: 0.0001\n",
-      "Current: 47\tTrain Acc: 0.3778000018000603\tTrain Cost: 1.6757837569713592\tTest Acc: 0.37150000045076015\tTest Cost: 1.6820321463048458\tLR: 0.0001\n",
-      "Current: 48\tTrain Acc: 0.36960000187158587\tTrain Cost: 1.6786118483543395\tTest Acc: 0.3428750017657876\tTest Cost: 1.722259522974491\tLR: 0.0001\n",
-      "Current: 49\tTrain Acc: 0.37320000171661377\tTrain Cost: 1.6670253014564513\tTest Acc: 0.37787500079721215\tTest Cost: 1.6711605027318002\tLR: 0.0001\n",
-      "Current: 50\tTrain Acc: 0.3742000013589859\tTrain Cost: 1.6663785827159883\tTest Acc: 0.374749999679625\tTest Cost: 1.6758137777447701\tLR: 0.0001\n",
-      "Current: 51\tTrain Acc: 0.3849999994039536\tTrain Cost: 1.6524475491046906\tTest Acc: 0.37250000033527614\tTest Cost: 1.6807654105126857\tLR: 0.0001\n",
-      "Current: 52\tTrain Acc: 0.38440000027418136\tTrain Cost: 1.6577727746963502\tTest Acc: 0.38299999907612803\tTest Cost: 1.6576874025166035\tLR: 0.0001\n",
-      "Current: 53\tTrain Acc: 0.39140000149607657\tTrain Cost: 1.6398702192306518\tTest Acc: 0.38724999949336053\tTest Cost: 1.6611658759415149\tLR: 0.0001\n",
-      "Current: 54\tTrain Acc: 0.39539999976754187\tTrain Cost: 1.6370338320732116\tTest Acc: 0.37725000055506824\tTest Cost: 1.6587295182049275\tLR: 0.0001\n",
-      "Current: 55\tTrain Acc: 0.395599999576807\tTrain Cost: 1.6369102478027344\tTest Acc: 0.3682499995455146\tTest Cost: 1.6793448396027089\tLR: 0.0001\n",
-      "Current: 56\tTrain Acc: 0.38240000158548354\tTrain Cost: 1.6367352509498596\tTest Acc: 0.37700000079348683\tTest Cost: 1.6510105103254318\tLR: 0.0001\n",
-      "Current: 57\tTrain Acc: 0.38299999982118604\tTrain Cost: 1.6302008163928985\tTest Acc: 0.375625002104789\tTest Cost: 1.6527208052575588\tLR: 0.0001\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Iter : 58/100 batch : 3550/5000 acc : 0.24 cost : 1.7512779\r"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-221-c8ce8342c53d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0miter\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnum_epoch\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcurrent_batch_index\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mcurrent_data\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0mcurrent_label\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0msess_results\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcost\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgrad_update\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_data\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_label\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0miter_num\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0miter\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Current: 1\tTrain Acc: 0.14420000053942203\tTrain Cost: 2.243335919380188\tTest Acc: 0.14212499991990626\tTest Cost: 2.2139619544148443\tLR: 0.0001\n",
+      "Current: 2\tTrain Acc: 0.17919999990612268\tTrain Cost: 2.12951425075531\tTest Acc: 0.1818750004749745\tTest Cost: 2.0861751459538938\tLR: 0.0001\n",
+      "Current: 3\tTrain Acc: 0.20120000008493663\tTrain Cost: 2.075878359079361\tTest Acc: 0.2027499995427206\tTest Cost: 2.061556754261255\tLR: 0.0001\n",
+      "Current: 4\tTrain Acc: 0.2067999993264675\tTrain Cost: 2.0585553920269013\tTest Acc: 0.207000000635162\tTest Cost: 2.0463199824094773\tLR: 0.0001\n",
+      "Current: 5\tTrain Acc: 0.2137999988347292\tTrain Cost: 2.0481307816505434\tTest Acc: 0.19375000002328308\tTest Cost: 2.085862845927477\tLR: 0.0001\n",
+      "Current: 6\tTrain Acc: 0.21979999966919422\tTrain Cost: 2.0336216461658476\tTest Acc: 0.22562499991618096\tTest Cost: 2.022768110781908\tLR: 0.0001\n",
+      "Current: 7\tTrain Acc: 0.23560000024735928\tTrain Cost: 2.022036861181259\tTest Acc: 0.2261249994393438\tTest Cost: 2.013014569878578\tLR: 0.0001\n",
+      "Current Iter : 8/100 batch : 3000/5000 acc : 0.18 cost : 1.9664313\r"
      ]
     }
    ],
