Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 228,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:45:53.021829Z",
-     "start_time": "2019-06-18T03:45:52.273578Z"
+     "end_time": "2019-06-18T03:49:01.840793Z",
+     "start_time": "2019-06-18T03:49:01.076343Z"
     }
    },
    "outputs": [],
@@ -343,11 +343,11 @@
     "\n",
     "layer1  = l1. feedforward(x,stride=2)    \n",
     "layer2  = l2.feedforward(layer1) \n",
-    "layer3  = l3.feedforward(layer2); \n",
+    "layer3  = l3.feedforward(layer2,stride=2); \n",
     "\n",
     "layer4  = l4.feedforward(layer3,stride=2);      \n",
     "layer5  = l5.feedforward(layer4);      \n",
-    "layer6  = l6.feedforward(layer5)\n",
+    "layer6  = l6.feedforward(layer5,stride=2)\n",
     "\n",
     "layer7  = l7.feedforward(layer6)\n",
     "layer8  = l8.feedforward(layer7)\n",
@@ -358,7 +358,7 @@
     "cost         = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=final_global,labels=y))\n",
     "accuracy     = tf.reduce_mean(tf.cast(tf.equal(tf.argmax(final_soft, 1), tf.argmax(y, 1)),tf.float32) )\n",
     "\n",
-    "gradient     = tf.tile((final_soft-y)[:,None,None,:],(1,24,24,1))\n",
+    "gradient     = tf.tile((final_soft-y)[:,None,None,:],(1,6,6,1))\n",
     "\n",
     "grad9, grad9_up  = l9. backprop(gradient,iter_num)\n",
     "grad8, grad8_up  = l8. backprop(grad9,iter_num)\n",
@@ -379,11 +379,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:45:54.413939Z",
-     "start_time": "2019-06-18T03:45:53.308811Z"
+     "start_time": "2019-06-18T03:49:01.538Z"
     }
    },
    "outputs": [],
@@ -398,7 +397,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:45:52.940Z"
+     "start_time": "2019-06-18T03:49:01.833Z"
     }
    },
    "outputs": [
@@ -406,14 +405,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.14420000053942203\tTrain Cost: 2.243335919380188\tTest Acc: 0.14212499991990626\tTest Cost: 2.2139619544148443\tLR: 0.0001\n",
-      "Current: 2\tTrain Acc: 0.17919999990612268\tTrain Cost: 2.12951425075531\tTest Acc: 0.1818750004749745\tTest Cost: 2.0861751459538938\tLR: 0.0001\n",
-      "Current: 3\tTrain Acc: 0.20120000008493663\tTrain Cost: 2.075878359079361\tTest Acc: 0.2027499995427206\tTest Cost: 2.061556754261255\tLR: 0.0001\n",
-      "Current: 4\tTrain Acc: 0.2067999993264675\tTrain Cost: 2.0585553920269013\tTest Acc: 0.207000000635162\tTest Cost: 2.0463199824094773\tLR: 0.0001\n",
-      "Current: 5\tTrain Acc: 0.2137999988347292\tTrain Cost: 2.0481307816505434\tTest Acc: 0.19375000002328308\tTest Cost: 2.085862845927477\tLR: 0.0001\n",
-      "Current: 6\tTrain Acc: 0.21979999966919422\tTrain Cost: 2.0336216461658476\tTest Acc: 0.22562499991618096\tTest Cost: 2.022768110781908\tLR: 0.0001\n",
-      "Current: 7\tTrain Acc: 0.23560000024735928\tTrain Cost: 2.022036861181259\tTest Acc: 0.2261249994393438\tTest Cost: 2.013014569878578\tLR: 0.0001\n",
-      "Current Iter : 8/100 batch : 3000/5000 acc : 0.18 cost : 1.9664313\r"
+      "Current: 1\tTrain Acc: 0.1549999998509884\tTrain Cost: 2.402570707798004\tTest Acc: 0.1723750000121072\tTest Cost: 2.165960454940796\tLR: 0.0001\n",
+      "Current Iter : 2/100 batch : 4850/5000 acc : 0.16 cost : 2.0914347\r"
      ]
     }
    ],
